# PauliAlgebra

./: .gitignore  README.md  pyproject.toml
.github/workflows/: macOs.yaml
PauliAlgebra/src/PauliAlgebra/: Pauli.py  __init__.py
PauliAlgebra/tests/: test_commutators.py  test_exponential.py  test_product.py  test_sum.py  test_utils.py
src/PauliAlgebra/: Pauli.py  __init__.py
tests/: test_commutators.py  test_exponential.py  test_product.py  test_sum.py  test_utils.py
