[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PauliAlgebra"
version="0.1.0"
authors = [
    {name = "Lorenzo Peri", email = "lorenzo@quantummotion.tech"},
]
description = "A Python library for the manipulation of Pauli operators and matrices"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    'scipy',
    'sympy',
]

[project.optional-dependencies]
tests = ["pytest"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore",
]
