[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PauliAlgebra"
version="0.2.0"
authors = [
    {name = "Lorenzo Peri", email = "lorenzo@quantummotion.tech"},
]
description = "A Python library for the manipulation of Pauli operators and matrices"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "sympy",
]

[tool.setuptools.packages.find]
where = ["PauliAlgebra/src"]

[project.optional-dependencies]
tests = [
    "pytest", 
    "scipy"
]

[tool.pytest.ini_options]
testpaths = [
    "PauliAlgebra/tests",
]
filterwarnings = [
    "ignore",
]
